# supreme-goggles

./: .gitignore  MIGRATION_GUIDE.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  SELF_CHECK_CHECKLIST.md  TARGET_SELECTOR_GUIDE.md  agent.md  build_log.txt  index.html  package-lock.json  package.json  start-cardmaker.bat  start-cardmaker.exe.bat  tsconfig.json  vite.config.ts  《对峙》卡牌编辑器 原子化规则与程序设计总守则.md
src/: App.js  App.tsx  index.css  main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf_20260529_131049_965.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/atomic/: constants.js  constants.ts  enums.js  enums.ts  index.js  index.ts  interfaces.ts
src/components/: CardPreview.js  CardPreview.tsx  ErrorBoundary.js  ErrorBoundary.tsx  index.js  index.ts
src/data/: config-defaults.json  effectLibrary.json
src/data/marks/: fengbao.json  jianyi.json  preset-marks.json  renxin.json  xuruo.json
src/pages/: Step1_CardType.js  Step1_CardType.tsx  Step2_BasicInfo.js  Step2_BasicInfo.tsx  Step3_EffectEdit.js  Step3_EffectEdit.tsx  Step4_Export.js  Step4_Export.tsx
src/store/: cardStore.js  cardStore.ts  configManager.js  configManager.ts  index.js  index.ts  markManager.js  markManager.ts
src/templates/: index.js  index.ts
src/templates/conditions/: condition-alive-check.js  condition-has-mark.js  (+22 more)
src/types/: card.js
src/utils/: buildDesc.js  exporters.js  exporters.ts  helpers.js  helpers.ts  validators.js  validators.ts
tests/unit/: cardStore.test.ts  helpers.test.ts  target.test.ts  validators.test.ts
(+65 files in other folders)
