[package]
name = "cardmaker"
version = "0.6.3"
description = "《对峙》卡牌编辑器"
authors = ["CardMaker Team"]
edition = "2021"

[lib]
name = "cardmaker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
